# elogate

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: main.yml
migrations/elogate/: 0_20250922112251_init.py  0_20250922120650_init.py  0_20250922130948_init.py  0_20250924134318_init.py  0_20250924212021_init.py  1_20250922155344_update.py
src/elogate/: auth_utils.py  config.py  database.py  errors.py  main.py  models.py  operations.py
src/elogate/ui/pages/: login_page.py  main_page.py  user_create_page.py  user_page.py  users_page.py
src/elogate/ui/widgets/: create_button.py  header.py  img_upload.py  player_card.py
tests/: conftest.py  test_basic.py  test_enforce_unique.py  test_nested_game.py
