[project]
name = "elogate"
version = "0.1.0"
description = "Web app to track game results using OpenSkill"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]>=0.9.1",
    "anyio>=4.10.0",
    "fastapi>=0.117.1",
    "nicegui>=2.24.2",
    "openskill>=6.1.3",
    "orjson>=3.11.3",
    "pydantic-settings>=2.11.0",
    "pytest-asyncio>=1.2.0",
    "starlette>=0.48.0",
    "tortoise-orm[accel]>=0.25.1",
]

[project.scripts]
elogate-server = "elogate.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"



[tool.aerich]

tortoise_orm = "elogate.database.TORTOISE_ORM"

location = "./migrations"

src_folder = "./."

[tool.basedpyright]
exclude = [
    "migrations/**"
]
# Allow turning everything off in one short comment to avoid issues with auto formatting
# moving things to different lines
reportIgnoreCommentWithoutRule = false

[dependency-groups]
dev = [
    "basedpyright>=1.31.5",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "tortoise-orm-stubs>=1.0.2",
]

